# cssr4africa

./: .gitignore  CMakeLists.txt  README.md  fastconformer_streaming.py  package.xml  whisper_test.py  whisper_test_faster.py  whisper_test_rw.py  z_whisper.py
cssr_system/: CMakeLists.txt  README.md  package.xml
cssr_system/animateBehaviour/: README.md
cssr_system/animateBehaviour/src/: animateBehaviourApplication.cpp  animateBehaviourImplementation.cpp
cssr_system/behaviorController/: CMakeLists.txt  README.md
cssr_system/behaviorController/action/: gestureExecutionPerformGesture.action  robotNavigationSetGoal.action  speechEventRecogniseSpeech.action
cssr_system/behaviorController/config/: behaviorControllerConfiguration.ini  environmentKnowledgeBaseConfiguration.ini
cssr_system/behaviorController/data/: labTour.xml  lab_tour.xml  lab_tour_2.xml  lab_tour_3.xml  lab_tour_4.xml  lab_tour_5.xml  lab_tour_6.xml  lab_tour_7.xml  lab_tour_a_e.xml  lab_tour_v1.xml  lab_tour_v2.xml  lab_tour_v3.xml  no_speech.xml  set_pose.xml
cssr_system/behaviorController/msg/: faceDetectionData.msg  overtAttentionMode.msg
cssr_system/behaviorController/src/: behaviorControllerApplication.cpp  behaviorControllerImplementation.cpp  environmentKnowledgeBaseImplementation.cpp
cssr_system/conversation_management/: README.md  conversation_management_requirements.txt
cssr_system/conversation_management/config/: conversation_management_configuration.ini
cssr_system/conversation_management/data/: system_prompt_input.txt
cssr_system/conversation_management/src/: conversation_management_application.py  conversation_management_implementation.py  conversation_management_utils.py
cssr_system/conversation_management/srv/: prompt.srv
cssr_system/face_detection/: README.md
cssr_system/face_detection/src/: face_detection_application.py  face_detection_implementation.py  face_detection_tracking.py
cssr_system/gestureExecution/: README.md
cssr_system/gestureExecution/src/: gestureExecutionApplication.cpp  gestureExecutionImplementation.cpp  pepperKinematicsUtilitiesImplementation.cpp
cssr_system/launch/: cssrSystemLaunchMission.launch  cssrSystemLaunchRobot.launch
cssr_system/mapGeneration/: README.md
cssr_system/mapGeneration/config/: mapGenerationConfiguration.ini
cssr_system/mapGeneration/src/: mapGenerationApplication.cpp  mapGenerationImplementation.cpp
cssr_system/overtAttention/: CMakeLists.txt  README.md
cssr_system/overtAttention/config/: overtAttentionConfiguration.ini
cssr_system/overtAttention/msg/: Status.msg
cssr_system/overtAttention/src/: overtAttentionApplication.cpp  overtAttentionImplementation.cpp
cssr_system/person_detection/: README.md
cssr_system/person_detection/launch/: person_detection_launch_robot.launch
cssr_system/person_detection/src/: person_detection_application.py  person_detection_implementation.py  person_detection_tracking.py
cssr_system/robotLocalization/: CMakeLists.txt  README.md
cssr_system/robotLocalization/config/: robotLocalizationConfiguration.json
cssr_system/robotLocalization/data/: arucoLandmarks.json
cssr_system/robotLocalization/launch/: robotLocalizationLaunchRobot.launch
cssr_system/robotLocalization/src/: robotLocalizationApplication.cpp  robotLocalizationImplementation.cpp
cssr_system/robotNavigation/: CMakeLists.txt  README.md
cssr_system/robotNavigation/action/: setGoal.action  setPose.action
cssr_system/robotNavigation/config/: robotNavigationConfiguration.ini
cssr_system/robotNavigation/src/: robotNavigationApplication.cpp  robotNavigationImplementation.cpp
cssr_system/robotNavigation/srv/: setGoal.srv
cssr_system/sound_detection/: README.md
cssr_system/sound_detection/config/: sound_detection_configuration.json
cssr_system/sound_detection/src/: sound_detection_application.py
cssr_system/speech_event/: README.md  speech_event_requirements.txt
cssr_system/speech_event/action/: recognise_speech.action  set_enabled.action  set_language.action
cssr_system/speech_event/config/: speech_event_configuration.ini
cssr_system/speech_event/src/: speech_event_application.py  speech_event_gui.py  speech_event_implementation.py  speech_event_transcription.py  (+1 more)
cssr_system/text_to_speech/: README.md  text_to_speech_requirements.txt
pepper_diagnostic_routines/: CMakeLists.txt  README.md  package.xml
pepper_diagnostic_routines/include/: diagnoses_rountines.h
pepper_diagnostic_routines/launch/: diagnoses.launch  diagnostics.launch
pepper_diagnostic_routines/src/: back_sonar.cpp  baseTranslationAndRotation.cpp  bottom_camera.cpp  depth_camera.cpp  front_camera.cpp  front_sonar.cpp  goToPosition.cpp  goToPositionMIMO.cpp  handTouch.cpp  headTouch.cpp  head_control.cpp  laser.cpp  left_arm_control.cpp  left_hand_control.cpp  pelvis_control.cpp  right_arm_control.cpp  right_hand_control.cpp
pepper_interface_tests/: CMakeLists.txt  README.md  package.xml
pepper_interface_tests/config/: actuatorTestConfiguration.ini  actuatorTestInput.ini  sensorTestConfiguration.ini  sensorTestInput.ini
pepper_interface_tests/launch/: actuatorTestLaunchRobot.launch  interface.launch  sensorTestLaunchRobot.launch
pepper_interface_tests/src/: actuatorTest.cpp  actuatorTestApplication.cpp  actuatorTestImplementation.cpp  sensorTest.cpp  sensorTestApplication.cpp  sensorTestImplementation.cpp
src/cssr_system/: CMakeLists.txt  package.xml
unit_tests/: CMakeLists.txt  README.md  package.xml
unit_tests/animateBehaviourTest/: CMakeLists.txt  README..md  README.md
unit_tests/behaviorControllerTest/: CMakeLists.txt  README.md
unit_tests/face_detection_test/: README.md
unit_tests/gestureExecutionTest/: CMakeLists.txt  README.md
unit_tests/mapGenerationTest/: README.md
unit_tests/overtAttentionTest/: CMakeLists.txt  README.md
unit_tests/person_detection_test/: README.md
unit_tests/robotLocalizationTest/: CMakeLists.txt  README.md
unit_tests/robotNavigationTest/: CMakeLists.txt  README.md
unit_tests/sound_detection_test/: README.md
unit_tests/speech_event_test/: README.md
(+501 files in other folders)
