<?xml version="1.0"?>
<package format="2">
  <name>pepper_diagnostic_routines</name>
  <version>0.0.0</version>
  <description>Package basic diagnostic routines to test ROS bridge</description>
  <maintainer email="pzantou@andrew.cmu.edu">Pamely ZANTOU</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>naoqi_driver</build_depend>
  <build_depend>naoqi_dcm_driver</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>


  <exec_depend>rospy</exec_depend>
  <exec_depend>pepper_control</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>naoqi_driver</exec_depend>
   <exec_depend>naoqi_dcm_driver</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>


  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>naoqi_dcm_driver</exec_depend>
  <exec_depend>pepper_control</exec_depend>

<!-- <build_depend>actionlib</build_depend>
<build_depend>actionlib_msgs</build_depend>
<exec_depend>actionlib</exec_depend>
<exec_depend>actionlib_msgs</exec_depend>
  
  -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
