<?xml version="1.0"?>
<package format="2">
  <name>cssr_system</name>
  <version>0.0.0</version>
  <description>The cssr_system package</description>

  <maintainer email="africa-robotics@andrew.cmu.edu">Carnegie Mellon University Africa</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>naoqi_dcm_driver</build_depend>
  <build_depend>naoqi_driver</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>utilities</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>naoqi_dcm_driver</exec_depend>
  <exec_depend>naoqi_driver</exec_depend>
  <exec_depend>pepper_control</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>utilities</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>

  <export>
  </export>
</package>
